# logpeek

./: .gitignore  Cargo.toml  README.md
src/: config.rs  lib.rs  logger.rs  main.rs
